# NewShell-SSH

./: .env.example  .gitignore  LICENSE  README.md  dev.bat  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
Vibe-Prompt/: AgentMind.md  BugList.md  PRD.md  VIBECODING.md  VIBECODING_Agent.md
nginx/: Dockerfile  nginx.conf.template
screenshots/: README.md  filemanager.png.txt  main.png.txt  terminal.png.txt
server/: Dockerfile  go.mod  go.sum  main.go
server/config/: config.go
server/crypto_util/: crypto.go
server/database/: db.go
server/handlers/: agent.go  ai.go  auth.go  connection.go  file.go  sync.go  sysinfo.go  terminal.go
server/models/: agent.go  ai_config.go  connection.go  user.go
server/services/: agent_service.go  agent_terminal.go  ai_service.go  sftp_service.go  skill_market.go  skill_parser.go  ssh_command.go  ssh_service.go  sysinfo_collector.go
server/tools/: builtin_tools.go  registry.go  safety.go  ssh_executor.go  ssh_tools.go  types.go
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: useKeyboardShortcuts.ts  useTerminalTheme.ts
src/services/: agentService.ts  api.ts  skillService.ts  sysinfoWS.ts  wsService.ts
src/stores/: activityStore.ts  agentStore.ts  aiConfigStore.ts  connectionStore.ts  downloadSettingsStore.ts  fileTransferStore.ts  fontSettingsStore.ts  groupStore.ts  skillStore.ts  syncStore.ts  terminalStore.ts  themeStore.ts
src/styles/: globals.css
(+29 files in other folders)
